- tree filter is working - expand alla nd collapse all added